--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>ala-name-matching</artifactId>
     <packaging>jar</packaging>
     <!-- Major version increment due to package structure change -->
-    <version>2.3.1</version>
+    <version>2.4.0</version>
     <name>ALA Name Matching</name>
     <!-- SCM entry that points to SVN directory that contains pom -->
     <scm>
@@ -23,7 +23,7 @@
     <properties>
         <!-- This project uses UTF8 for Regular Expressions -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.apache.lucene.version>4.1.0</org.apache.lucene.version>
+        <org.apache.lucene.version>5.3.1</org.apache.lucene.version>
     </properties>
     <dependencies>
         <dependency>
@@ -81,6 +81,11 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queryparser</artifactId>
+            <version>${org.apache.lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-backward-codecs</artifactId>
             <version>${org.apache.lucene.version}</version>
         </dependency>
         <dependency>
